Closed Bug 1333898 Opened 8 years ago Closed 8 years ago

MessageChannel messaging incorrectly sets .source on the MessageEvent, as far as I can tell

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla54
Tracking Status
firefox54 --- fixed

People

(Reporter: bzbarsky, Assigned: baku)

Details

Attachments

(1 file)

This is leading to a test failure in testing/web-platform/tests/workers/postMessage_event_properties.htm on this line: assert_equals(evt.source, null, "source"); Per spec at https://html.spec.whatwg.org/multipage/comms.html#dom-messageport-postmessage as far as I can tell "source" never gets set so should be null... Note that "source" _is_ expected to be present for "connect" events on SharedWorkerGlobalScope, but not for the MessageChannel case, afaict....
Flags: needinfo?(kyle)
Flags: needinfo?(amarchesini)
Assignee: nobody → amarchesini
Flags: needinfo?(kyle)
Flags: needinfo?(amarchesini)
Also note that I could be misreading the spec and the test could be bogus. So please double-check me on this!
Attachment #8830728 - Flags: review?(kyle)
Attachment #8830728 - Flags: review?(kyle) → review+
Pushed by amarchesini@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/4b310f568584 MessageChannel messaging sets .ports to null, r=qdot
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: