Bug 1333898 - MessageChannel messaging sets .ports to null, r=qdot