dom/messagechannel/MessagePort.cpp
@@ -139,13 +139,10 @@ private:
       return NS_ERROR_OUT_OF_MEMORY;
     }
 
-    Nullable<WindowProxyOrMessagePort> source;
-    source.SetValue().SetAsMessagePort() = mPort;
-
     event->InitMessageEvent(nullptr, NS_LITERAL_STRING("message"),
                             false /* non-bubbling */,
                             false /* cancelable */, value, EmptyString(),
-                            EmptyString(), source, ports);
+                            EmptyString(), nullptr, ports);
     event->SetTrusted(true);
 
     bool dummy;
